--- a/ToggleableOverlays/ToggleableOverlays.csproj
+++ b/ToggleableOverlays/ToggleableOverlays.csproj
@@ -5,7 +5,7 @@
 		<LangVersion>9</LangVersion>
 		<TargetFramework>net472</TargetFramework>
 		<Configurations>Debug;Release</Configurations>
-		<Version>1.0.0</Version>
+		<Version>1.0.2</Version>
 		<FileVersion>$(Version)</FileVersion>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<Company>T. D. W.</Company>
@@ -25,6 +25,16 @@
 
 	<Target Name="BuildUI" AfterTargets="AfterBuild">
 		<Exec Command="npm run build" WorkingDirectory="$(ProjectDir)/UI" />
+	</Target>
+
+	<Target Name="UpdatePublishConfiguration" BeforeTargets="Publish">
+		<PropertyGroup>
+			<PdxPublishConfiguration>$([System.IO.Path]::GetFullPath('..\PdxPublishConfiguration\PdxPublishConfiguration.exe'))</PdxPublishConfiguration>
+			<ChangelogJsonFile>"$([System.IO.Path]::GetFullPath('..\ToggleableOverlays\Changelog.json'))"</ChangelogJsonFile>
+			<PublishConfigurationFile>"$([System.IO.Path]::GetFullPath('..\ToggleableOverlays\$(PublishConfigurationPath)'))"</PublishConfigurationFile>
+		</PropertyGroup>
+
+		<Exec Command="$(PdxPublishConfiguration) $(PublishConfigurationFile) $(Version) Stable $(ChangelogJsonFile) $(ModPublisherCommand)" />
 	</Target>
 
 	<ItemGroup>
